@@ -1,3 +1,12 @@
+2009-05-13  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>
+
+	Order task launcher entries alphabetically if they don't have a position.
+	Fixes: NB#116215
+
+	* src/launcher/hd-launcher-item.c: Add hard-coded positions for default
+	apps in 'Applications' subgroup.
+	* src/launcher/hd-launcher-tree.c:
+
 2009-05-13  Gordon Williams <gordon.williams@collabora.co.uk>
 
 	* data/transitions.ini: X now blanks for less time so have shortened
